[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/copilot/Copilot.gd" type="Script" id=1]
[ext_resource path="res://addons/copilot/OpenAIChat.gd" type="Script" id=2]
[ext_resource path="res://addons/copilot/small_icon.tres" type="Material" id=3]
[ext_resource path="res://addons/copilot/OpenAICompletion.gd" type="Script" id=4]
[ext_resource path="res://addons/copilot/large_icon.tres" type="Material" id=5]

[node name="Copilot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
icon_shader = ExtResource( 3 )
highlight_color = Color( 0.223529, 0.254902, 0.298039, 1 )

[node name="VBoxParent" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Indicator" type="ColorRect" parent="VBoxParent"]
material = ExtResource( 5 )
margin_left = 412.0
margin_right = 612.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 4

[node name="ContextTitle" type="Label" parent="VBoxParent"]
modulate = Color( 1, 1, 1, 0.7 )
margin_top = 204.0
margin_right = 1024.0
margin_bottom = 218.0
text = "Current Context"
align = 1
valign = 1

[node name="Context" type="Label" parent="VBoxParent"]
margin_top = 222.0
margin_right = 1024.0
margin_bottom = 236.0
align = 1
valign = 1

[node name="Status" type="Label" parent="VBoxParent"]
modulate = Color( 1, 1, 1, 0.7 )
margin_top = 240.0
margin_right = 1024.0
margin_bottom = 254.0
align = 1
valign = 1

[node name="HowToTitle" type="Label" parent="VBoxParent"]
margin_top = 258.0
margin_right = 1024.0
margin_bottom = 272.0
text = "How To Use"
autowrap = true

[node name="Separator1" type="HSeparator" parent="VBoxParent"]
margin_top = 276.0
margin_right = 1024.0
margin_bottom = 280.0

[node name="HowTo" type="Label" parent="VBoxParent"]
margin_top = 284.0
margin_right = 1024.0
margin_bottom = 298.0
text = "Press the selected shortcut in the code editor to request a completion from Copilot at the current caret position"
autowrap = true

[node name="SettingTitle" type="Label" parent="VBoxParent"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 316.0
text = "Settings"
autowrap = true

[node name="Separator2" type="HSeparator" parent="VBoxParent"]
margin_top = 320.0
margin_right = 1024.0
margin_bottom = 324.0

[node name="OpenAiSetting" type="HBoxContainer" parent="VBoxParent"]
margin_top = 328.0
margin_right = 1024.0
margin_bottom = 352.0

[node name="Label" type="Label" parent="VBoxParent/OpenAiSetting"]
margin_right = 506.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "OpenAI API Key"
autowrap = true

[node name="VSeparator" type="VSeparator" parent="VBoxParent/OpenAiSetting"]
margin_left = 510.0
margin_right = 514.0
margin_bottom = 24.0

[node name="OpenAiKey" type="LineEdit" parent="VBoxParent/OpenAiSetting"]
margin_left = 966.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 10
secret = true
placeholder_text = "API Key"

[node name="ModelSetting" type="HBoxContainer" parent="VBoxParent"]
margin_top = 356.0
margin_right = 1024.0
margin_bottom = 376.0

[node name="Label" type="Label" parent="VBoxParent/ModelSetting"]
margin_right = 506.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Model"
autowrap = true

[node name="VSeparator" type="VSeparator" parent="VBoxParent/ModelSetting"]
margin_left = 510.0
margin_right = 514.0
margin_bottom = 20.0

[node name="Model" type="OptionButton" parent="VBoxParent/ModelSetting"]
margin_left = 911.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "gpt-3.5-turbo"
items = [ "text-davinci-003", null, false, 0, null, "gpt-3.5-turbo", null, false, 1, null, "gpt-4", null, false, 2, null ]
selected = 1

[node name="ShortcutSetting" type="HBoxContainer" parent="VBoxParent"]
margin_top = 380.0
margin_right = 1024.0
margin_bottom = 400.0

[node name="Label" type="Label" parent="VBoxParent/ShortcutSetting"]
margin_right = 506.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Shortcut"
autowrap = true

[node name="VSeparator" type="VSeparator" parent="VBoxParent/ShortcutSetting"]
margin_left = 510.0
margin_right = 514.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxParent/ShortcutSetting"]
margin_left = 908.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 10

[node name="Modifier" type="OptionButton" parent="VBoxParent/ShortcutSetting/HBoxContainer"]
margin_right = 75.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Control"
items = [ "Cmd", null, false, 0, null, "Option", null, false, 1, null, "Control", null, false, 2, null, "Shift", null, false, 3, null ]
selected = 2

[node name="Key" type="OptionButton" parent="VBoxParent/ShortcutSetting/HBoxContainer"]
margin_left = 79.0
margin_right = 116.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "C"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 2, null, "E", null, false, 2, null, "F", null, false, 2, null, "G", null, false, 2, null, "H", null, false, 2, null, "I", null, false, 2, null, "J", null, false, 2, null, "K", null, false, 2, null, "L", null, false, 2, null, "M", null, false, 2, null, "N", null, false, 2, null, "O", null, false, 2, null, "P", null, false, 2, null, "Q", null, false, 2, null, "R", null, false, 2, null, "S", null, false, 2, null, "T", null, false, 2, null, "U", null, false, 2, null, "V", null, false, 2, null, "W", null, false, 2, null, "X", null, false, 2, null, "Y", null, false, 2, null, "Z", null, false, 2, null, "1", null, false, 2, null, "2", null, false, 2, null, "3", null, false, 2, null, "4", null, false, 2, null, "5", null, false, 2, null, "6", null, false, 2, null, "7", null, false, 2, null, "8", null, false, 2, null, "9", null, false, 2, null, "0", null, false, 2, null ]
selected = 2

[node name="MultilineSetting" type="HBoxContainer" parent="VBoxParent"]
margin_top = 404.0
margin_right = 1024.0
margin_bottom = 428.0

[node name="Label" type="Label" parent="VBoxParent/MultilineSetting"]
margin_right = 506.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Multiline Completions"
autowrap = true

[node name="VSeparator" type="VSeparator" parent="VBoxParent/MultilineSetting"]
margin_left = 510.0
margin_right = 514.0
margin_bottom = 24.0

[node name="Multiline" type="CheckBox" parent="VBoxParent/MultilineSetting"]
margin_left = 946.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 10
pressed = true
text = "Enabled"

[node name="LLMs" type="Node" parent="."]

[node name="OpenAICompletion" type="Node" parent="LLMs"]
script = ExtResource( 4 )

[node name="OpenAIChat" type="Node" parent="LLMs"]
script = ExtResource( 2 )

[node name="Version" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="text_changed" from="VBoxParent/OpenAiSetting/OpenAiKey" to="." method="_on_open_ai_key_changed"]
[connection signal="item_selected" from="VBoxParent/ModelSetting/Model" to="." method="_on_model_selected"]
[connection signal="item_selected" from="VBoxParent/ShortcutSetting/HBoxContainer/Modifier" to="." method="_on_shortcut_modifier_selected"]
[connection signal="item_selected" from="VBoxParent/ShortcutSetting/HBoxContainer/Key" to="." method="_on_shortcut_key_selected"]
[connection signal="toggled" from="VBoxParent/MultilineSetting/Multiline" to="." method="_on_multiline_toggled"]
[connection signal="completion_error" from="LLMs/OpenAICompletion" to="." method="_on_code_completion_error"]
[connection signal="completion_received" from="LLMs/OpenAICompletion" to="." method="_on_code_completion_received"]
[connection signal="completion_error" from="LLMs/OpenAIChat" to="." method="_on_code_completion_error"]
[connection signal="completion_received" from="LLMs/OpenAIChat" to="." method="_on_code_completion_received"]
